@@ -1,3 +1,8 @@
+Camlp5 Version 5.15:
+--------------------
+
+* [29 Apr 10] Fixed bug in pr_depend.cmo: a.B.c did not add module B.
+
 Camlp5 Version 5.14:
 --------------------
 
